# 50cc-LSR-Data-Logger

./: .gitignore  .gitmodules  README.md
examples/adc/: CMakeLists.txt  adc.c
examples/led-indicator/: CMakeLists.txt  led_indicator.c
notes/: logger_requirements  windows_setup
project/: CMakeLists.txt
project/apps/: CMakeLists.txt  main.c
project/apps/nocowbell/: README.md  cowbell.c
project/docs/design/: datalogger.kicad_pcb  datalogger.kicad_prl  datalogger.kicad_pro  datalogger.kicad_sch  fp-info-cache  untitled.kicad_sch
project/docs/schematic/: Makefile  logger.bom.tsv
project/docs/schematic/example/: schematic.gv  schematic.html
project/include/: controls.h  hes.h  lcd.h  max31855.h  pcf8520.h  picowbell_pcf8520.h  picowbell_sd_card.h  pin_config.h  writebuffer.h
project/scripts/: flash_program.sh
project/src/: CMakeLists.txt  pcf8520.c  picowbell_pcf8520.c  picowbell_sd_card.h
project/src/controls/: CMakeLists.txt  controls.c
project/src/hes/: CMakeLists.txt  hes.c
project/src/lcd/: CMakeLists.txt  lcd.c
project/src/max31855/: CMakeLists.txt  max31855.c
project/src/picowbell_pcf8520/: CMakeLists.txt  picowbell_pcf8520.c
project/src/picowbell_sd_card/: CMakeLists.txt  picowbell_sd_card.c
project/src/writebuffer/: CMakeLists.txt  writebuffer.c
source/: CMakeLists.txt  main.c  runloop.c
source/schematic/: logger.bom.tsv  logger.gv  logger.html  logger.yml
source/schematic/example/: schematic.yml
velocity/: .gitignore  CMakeLists.txt  ll.c  ll.h  velocity.c
